nucleo-picker-vt/tests/scenarios/snapshots/scenarios__multiline__multiline_reversed@default-narrow-size.snap
---
source: nucleo-picker-vt/tests/scenarios/multiline.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: default-narrow-size
  name_expression: "\"default-narrow-size\""
  sequence: 18
---
version: 1
size:
  cols: 12
  rows: 40
screen: alternate
cursor:
  position:
    x: 2
    y: 0
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - ">           "
  - "  24/24 ────"
  - "▌ item-00   "
  - "  item-01   "
  - "    detail-…"
  - "  item-02   "
  - "    detail-…"
  - "    detail-…"
  - "    detail-…"
  - "  item-03   "
  - "  item-04   "
  - "    detail-…"
  - "  item-05   "
  - "    detail-…"
  - "    detail-…"
  - "    detail-…"
  - "  item-06   "
  - "  item-07   "
  - "    detail-…"
  - "  item-08   "
  - "    detail-…"
  - "    detail-…"
  - "    detail-…"
  - "  item-09   "
  - "  item-10   "
  - "    detail-…"
  - "  item-11   "
  - "    detail-…"
  - "    detail-…"
  - "    detail-…"
  - "  item-12   "
  - "  item-13   "
  - "    detail-…"
  - "  item-14   "
  - "    detail-…"
  - "    detail-…"
  - "    detail-…"
  - "  item-15   "
  - "  item-16   "
  - "    detail-…"
styles:
  - row: 1
    start: 0
    end: 7
    foreground: "#b9ca4a"
    italic: true
  - row: 1
    start: 7
    end: 12
    foreground: "#c5c8c6"
    italic: true
  - row: 2
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 2
    start: 1
    end: 9
    background: "#666666"
    bold: true
