nucleo-picker-vt/tests/scenarios/snapshots/scenarios__multiline__multiline_reversed@default-restore-60x16.snap
---
source: nucleo-picker-vt/tests/scenarios/multiline.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: default-restore-60x16
  name_expression: "\"default-restore-60x16\""
  sequence: 37
---
version: 1
size:
  cols: 60
  rows: 16
screen: alternate
cursor:
  position:
    x: 2
    y: 0
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - ">                                                           "
  - "  24/24 ────────────────────────────────────────────────────"
  - "  item-00                                                   "
  - "▌ item-01                                                   "
  - "▌   detail-01-a                                             "
  - "  item-02                                                   "
  - "    detail-02-a                                             "
  - "    detail-02-b                                             "
  - "    detail-02-c                                             "
  - "  item-03                                                   "
  - "  item-04                                                   "
  - "    detail-04-a                                             "
  - "  item-05                                                   "
  - "    detail-05-a                                             "
  - "    detail-05-b                                             "
  - "    detail-05-c                                             "
styles:
  - row: 1
    start: 0
    end: 7
    foreground: "#b9ca4a"
    italic: true
  - row: 1
    start: 7
    end: 60
    foreground: "#c5c8c6"
    italic: true
  - row: 3
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 3
    start: 1
    end: 9
    background: "#666666"
    bold: true
  - row: 4
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 4
    start: 1
    end: 15
    background: "#666666"
    bold: true
